Archive2/b3/1c68617d5f1f77/output
main.cpp: In function 'int main()':
main.cpp:51:13: error: 'el' was not declared in this scope
         fun(el);
             ^
